[*] Fix Get All Product