@@ -5,10 +5,15 @@ import com.zyna.dev.ecommerce.common.utils.FileUploadUtil;
 import com.zyna.dev.ecommerce.products.*;
 import com.zyna.dev.ecommerce.products.criteria.ProductCriteria;
 import com.zyna.dev.ecommerce.products.dto.response.ProductResponse;
+import com.zyna.dev.ecommerce.products.models.PriceHistory;
+import com.zyna.dev.ecommerce.products.models.Product;
+import com.zyna.dev.ecommerce.products.models.ProductImage;
 import com.zyna.dev.ecommerce.products.repository.PriceHistoryRepository;
 import com.zyna.dev.ecommerce.products.repository.ProductImageRepository;
 import com.zyna.dev.ecommerce.products.repository.ProductRepository;
 import com.zyna.dev.ecommerce.products.service.interfaces.ProductService;
+import org.springframework.transaction.annotation.Transactional;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.*;
@@ -20,7 +25,6 @@ import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -32,9 +36,7 @@ public class ProductServiceImpl implements ProductService {
     private final ProductImageRepository productImageRepository;
     private final PriceHistoryRepository priceHistoryRepository;
 
-    /**
-     * ✅ CREATE PRODUCT (multipart/form-data)
-     */
+    // CREATE PRODUCT (multipart/form-data)
     @Override
     public ProductResponse createProduct(String name, String description, Double price,
                                          String category, Integer stock, MultipartFile image) {
@@ -62,23 +64,22 @@ public class ProductServiceImpl implements ProductService {
         return productMapper.toProductResponse(saved);
     }
 
-    /**
-     * ✅ GET ACTIVE PRODUCT BY ID
-     */
+    // GET ACTIVE PRODUCT BY ID
     @Override
+    @Transactional(readOnly = true)
     public ProductResponse getProductById(Long id) {
         Product product = productRepository.findActiveByIdWithGallery(id)
                 .orElseThrow(() ->
-                        new ApplicationException(HttpStatus.NOT_FOUND, "Product not found or inactive")
+                        new ApplicationException(HttpStatus.NOT_FOUND, "Product not found or inactive!")
                 );
 
         return productMapper.toProductResponse(product);
     }
 
-    /**
-     * ✅ SEARCH PRODUCTS (filter, pagination, sorting)
-     */
+
+    // SEARCH PRODUCTS (filter, pagination, sorting)
     @Override
+    @Transactional(readOnly = true)
     public Page<ProductResponse> searchProducts(ProductCriteria criteria, int page, int size) {
         Page<Product> basePage = productRepository.findAllByIsActiveTrue(
                 PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "createdAt"))
@@ -101,14 +102,12 @@ public class ProductServiceImpl implements ProductService {
         List<ProductResponse> filtered = basePage.getContent().stream()
                 .filter(matches)
                 .map(productMapper::toProductResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageImpl<>(filtered, basePage.getPageable(), filtered.size());
     }
 
-    /**
-     * ✅ UPDATE PRODUCT (multipart/form-data)
-     */
+    // UPDATE PRODUCT (multipart/form-data)
     @Override
     public ProductResponse updateProduct(Long id, String name, String description, Double price,
                                          String category, Integer stock, MultipartFile image) {
@@ -120,13 +119,13 @@ public class ProductServiceImpl implements ProductService {
             throw new ApplicationException(HttpStatus.BAD_REQUEST, "Product is inactive. Restore before updating!");
         }
 
-        // 🖼️ Nếu có ảnh mới → thay ảnh
+        // Nếu có ảnh mới → thay ảnh
         if (image != null && !image.isEmpty()) {
             String newImageUrl = FileUploadUtil.replaceImage(product.getImageUrl(), image);
             product.setImageUrl(newImageUrl);
         }
 
-        // 💰 Kiểm tra nếu giá thay đổi → lưu vào lịch sử giá
+        // Kiểm tra nếu giá thay đổi → lưu vào lịch sử giá
         if (price != null && product.getPrice() != null &&
                 product.getPrice().compareTo(BigDecimal.valueOf(price)) != 0) {
 
@@ -139,7 +138,7 @@ public class ProductServiceImpl implements ProductService {
                     .build();
 
             priceHistoryRepository.save(history);
-            log.info("💰 Price changed for product id={}, {} → {}", id, product.getPrice(), price);
+            log.info("Price changed for product id={}, {} → {}", id, product.getPrice(), price);
         }
 
         if (name != null) product.setName(name);
@@ -151,63 +150,55 @@ public class ProductServiceImpl implements ProductService {
         product.setUpdatedAt(LocalDateTime.now());
         Product saved = productRepository.save(product);
 
-        log.info("🛠 Product updated id={}, image replaced={}", id, (image != null && !image.isEmpty()));
+        log.info("Product updated id={}, image replaced={}", id, (image != null && !image.isEmpty()));
         return productMapper.toProductResponse(saved);
     }
 
-    /**
-     * ✅ SOFT DELETE PRODUCT
-     */
+    // SOFT DELETE PRODUCT
     @Override
     public void softDeleteProduct(Long id) {
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new ApplicationException(HttpStatus.NOT_FOUND, "Product not found"));
+                .orElseThrow(() -> new ApplicationException(HttpStatus.NOT_FOUND, "Product not found!"));
 
         if (!product.getIsActive()) {
-            throw new ApplicationException(HttpStatus.BAD_REQUEST, "Product already inactive");
+            throw new ApplicationException(HttpStatus.BAD_REQUEST, "Product already inactive!");
         }
 
         product.setIsActive(false);
         product.setDeletedAt(LocalDateTime.now());
         productRepository.save(product);
 
-        log.info("🗑️ Soft deleted product id={}", id);
+        log.info("Soft deleted product id={}", id);
     }
 
-    /**
-     * ✅ RESTORE PRODUCT
-     */
+    // RESTORE PRODUCT
     @Override
     public void restoreProduct(Long id) {
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new ApplicationException(HttpStatus.NOT_FOUND, "Product not found"));
+                .orElseThrow(() -> new ApplicationException(HttpStatus.NOT_FOUND, "Product not found!"));
 
         if (product.getIsActive()) {
-            throw new ApplicationException(HttpStatus.BAD_REQUEST, "Product already active");
+            throw new ApplicationException(HttpStatus.BAD_REQUEST, "Product already active!");
         }
 
         product.setIsActive(true);
         product.setDeletedAt(null);
         productRepository.save(product);
 
-        log.info("♻️ Restored product id={}", id);
+        log.info("Restored product id={}", id);
     }
 
-    /**
-     * ✅ HARD DELETE PRODUCT
-     */
+    // HARD DELETE PRODUCT
     @Override
     public void hardDeleteProduct(Long id) {
         if (!productRepository.existsById(id)) {
-            throw new ApplicationException(HttpStatus.NOT_FOUND, "Product not found");
+            throw new ApplicationException(HttpStatus.NOT_FOUND, "Product not found!");
         }
         productRepository.deleteById(id);
-        log.info("❌ Hard deleted product id={}", id);
+        log.info("Hard deleted product id={}", id);
     }
 
-    /**
-     * ✅ BULK SOFT DELETE
-     */
+    // BULK SOFT DELETE
     @Override
     public List<Long> softDeleteProducts(List<Long> ids) {
         if (ids == null || ids.isEmpty()) return Collections.emptyList();
@@ -222,14 +213,12 @@ public class ProductServiceImpl implements ProductService {
         });
 
         productRepository.saveAll(products);
-        log.info("🗑️ Soft deleted {} products", products.size());
+        log.info("Soft deleted {} products", products.size());
 
         return products.stream().map(Product::getId).toList();
     }
 
-    /**
-     * ✅ BULK RESTORE
-     */
+    // BULK RESTORE
     @Override
     public List<Long> restoreProducts(List<Long> ids) {
         if (ids == null || ids.isEmpty()) return Collections.emptyList();
@@ -243,29 +232,26 @@ public class ProductServiceImpl implements ProductService {
         });
 
         productRepository.saveAll(products);
-        log.info("♻️ Restored {} products", products.size());
+        log.info("Restored {} products", products.size());
 
         return products.stream().map(Product::getId).toList();
     }
 
-    /**
-     * ✅ BULK HARD DELETE
-     */
+    // BULK HARD DELETE
     @Override
     public List<Long> hardDeleteProducts(List<Long> ids) {
         if (ids == null || ids.isEmpty()) return Collections.emptyList();
 
         List<Product> products = productRepository.findAllById(ids);
         productRepository.deleteAll(products);
-        log.info("❌ Hard deleted {} products", products.size());
+        log.info("Hard deleted {} products", products.size());
 
         return products.stream().map(Product::getId).toList();
     }
 
-    /**
-     * ✅ GET ALL DELETED PRODUCTS
-     */
+    // GET ALL DELETED PRODUCTS
     @Override
+    @Transactional(readOnly = true)
     public Page<ProductResponse> getDeletedProducts(ProductCriteria criteria, int page, int size) {
         Page<Product> basePage = productRepository.findAllByIsActiveFalse(
                 PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "deletedAt"))
@@ -287,6 +273,7 @@ public class ProductServiceImpl implements ProductService {
         return new PageImpl<>(filtered, basePage.getPageable(), filtered.size());
     }
 
+    // CREATE GALLERY
     @Override
     public List<String> addGalleryImages(Long productId, List<MultipartFile> images) {
         Product product = productRepository.findById(productId)
@@ -307,19 +294,20 @@ public class ProductServiceImpl implements ProductService {
                 .toList();
 
         productImageRepository.saveAll(gallery);
-        log.info("📸 Added {} gallery images for product id={}", gallery.size(), productId);
+        log.info("Added {} gallery images for product id={}", gallery.size(), productId);
 
         return savedUrls;
     }
 
+    // DELETE 1 IMAGE IN GALLERY
     @Override
     public void deleteGalleryImage(Long productId, Long imageId) {
         ProductImage image = productImageRepository.findById(imageId)
-                .orElseThrow(() -> new ApplicationException(HttpStatus.NOT_FOUND, "Image not found"));
+                .orElseThrow(() -> new ApplicationException(HttpStatus.NOT_FOUND, "Image not found!"));
 
         // bảo vệ: image phải thuộc đúng product
         if (image.getProduct() == null || !image.getProduct().getId().equals(productId)) {
-            throw new ApplicationException(HttpStatus.BAD_REQUEST, "Image does not belong to this product");
+            throw new ApplicationException(HttpStatus.BAD_REQUEST, "Image does not belong to this product!");
         }
 
         // xóa file trên disk
@@ -328,9 +316,10 @@ public class ProductServiceImpl implements ProductService {
         // xóa record trong DB
         productImageRepository.delete(image);
 
-        log.info("🗑️ Deleted gallery image id={} of product id={}", imageId, productId);
+        log.info("Deleted gallery image id={} of product id={}", imageId, productId);
     }
 
+    // DELETE GALLERY
     @Override
     public int deleteAllGalleryImages(Long productId) {
         List<ProductImage> images = productImageRepository.findAllByProductId(productId);
@@ -345,9 +334,7 @@ public class ProductServiceImpl implements ProductService {
         // xóa DB
         productImageRepository.deleteAll(images);
 
-        log.info("🗑️ Deleted {} gallery images of product id={}", images.size(), productId);
+        log.info("Deleted {} gallery images of product id={}", images.size(), productId);
         return images.size();
     }
-
-
 }
